styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background-color: rgb(84, 47, 53);
}

.container {
    background-color: rgb(255, 246, 192);
    border-radius: 10px 3px 3px 10px;
    display: flex;
    gap: 20px;
}

.cal-container {
    font-family: "ZCOOL QingKe HuangYou", sans-serif;
    padding: 25px 20px 20px 20px;
    background-color: #b3f5d7;
    border: 2px solid #2e4038;
    border-radius: 10px;
    box-shadow: rgba(45, 45, 45, 60%) 10px 10px 15px;
}

.full-display {
    background-color: #d0e4e5;
    padding: 5px 8px;
    margin-bottom: 16px;
    border: 2px solid rgb(45, 45, 45);
}

#full-expression {
    height: 35px;
    font-family: inherit;
    font-size: 25px;
    text-align: right;
    opacity: 70%;
}

#display {
    height: 60px;
    font-family: inherit;
    font-size: 40px;
    text-align: right;
}

.keypad {
    display: flex;
    flex-direction: column;
    gap: 3px;
}

.row {
    display: flex;
    gap: 5px;
}

button {
    width: 65px;
    height: 65px;
    padding: 10px;
    text-align: center;
    font-family: inherit;
    font-size: 22px;
    border-radius: 5px;
}

.op {
    background-color: #94eff9;
    border-color: #3095cc;
}

.debug-container {
    width: 200px;
    padding: 25px 20px;
}

.debug-container p{
    margin: 5px 0;
    font-family: 'Courier New', Courier, monospace;
    font-size: 18px;
    color: rgb(27, 27, 27);
}

